data/forge_javadoc/1.11.2/processed/net_minecraft_world_World.md
# World

**Inheritance:** java.lang.Object → net.minecraft.world.World

## Class signature

```java
public abstract class World extends java.lang.Object implements IBlockAccess, ICapabilityProvider
```

## Constructors

- `World(ISaveHandler saveHandlerIn, WorldInfo info, WorldProvider providerIn, Profiler profilerIn, boolean client)`

## Methods

- `void addBlockEvent(BlockPos pos, Block blockIn, int eventID, int eventParam)`
- `void addEventListener(IWorldEventListener listener)`
- `void addTileEntities(java.util.Collection<TileEntity> tileEntityCollection)`
- `boolean addTileEntity(TileEntity tile)`
- `boolean addWeatherEffect(Entity entityIn)`
- `CrashReportCategory addWorldInfoToCrashReport(CrashReport report)`
- `void calculateInitialSkylight()`
- `protected void calculateInitialWeather()`
- `void calculateInitialWeatherBody()`
- `int calculateSkylightSubtracted(float partialTicks)`
- `boolean canBlockFreeze(BlockPos pos, boolean noWaterAdj)`
- `boolean canBlockFreezeBody(BlockPos pos, boolean noWaterAdj)`
- `boolean canBlockFreezeNoWater(BlockPos pos)`
- `boolean canBlockFreezeWater(BlockPos pos)`
- `boolean canBlockSeeSky(BlockPos pos)`
- `boolean canMineBlockBody(EntityPlayer player, BlockPos pos)`
- `boolean canSeeSky(BlockPos pos)`
- `boolean canSnowAt(BlockPos pos, boolean checkLight)`
- `boolean canSnowAtBody(BlockPos pos, boolean checkLight)`
- `boolean checkBlockCollision(AxisAlignedBB bb)`
- `boolean checkLight(BlockPos pos)`
- `boolean checkLightFor(EnumSkyBlock lightType, BlockPos pos)`
- `boolean checkNoEntityCollision(AxisAlignedBB bb)`
- `boolean checkNoEntityCollision(AxisAlignedBB bb, Entity entityIn)`
- `void checkSessionLock()`
- `boolean collidesWithAnyBlock(AxisAlignedBB bbox)`
- `boolean containsAnyLiquid(AxisAlignedBB bb)`
- `int countEntities(java.lang.Class<?> entityType)`
- `int countEntities(EnumCreatureType type, boolean forSpawnCount)` — Returns a count of entities that classify themselves as the specified creature type.
- `protected abstract IChunkProvider createChunkProvider()`
- `Explosion createExplosion(Entity entityIn, double x, double y, double z, float strength, boolean isSmoking)`
- `boolean destroyBlock(BlockPos pos, boolean dropBlock)`
- `boolean extinguishFire(EntityPlayer player, BlockPos pos, EnumFacing side)`
- `<T extends Entity> T findNearestEntityWithinAABB(java.lang.Class<? extends T> entityType, AxisAlignedBB aabb, T closestTo)`
- `BlockPos findNearestStructure(java.lang.String p_190528_1_, BlockPos p_190528_2_, boolean p_190528_3_)`
- `boolean func_191503_g(Entity p_191503_1_)`
- `int getActualHeight()`
- `Biome getBiome(BlockPos pos)`
- `Biome getBiomeForCoordsBody(BlockPos pos)`
- `BiomeProvider getBiomeProvider()`
- `float getBlockDensity(Vec3d vec, AxisAlignedBB bb)`
- `int getBlockLightOpacity(BlockPos pos)` — Readded as it was removed, very useful helper function
- `IBlockState getBlockState(BlockPos pos)`
- `<T> T getCapability(Capability<T> capability, EnumFacing facing)` — Retrieves the handler for the capability requested on the specific side.
- `float getCelestialAngle(float partialTicks)`
- `float getCelestialAngleRadians(float partialTicks)`
- `Chunk getChunkFromBlockCoords(BlockPos pos)`
- `Chunk getChunkFromChunkCoords(int chunkX, int chunkZ)`
- `IChunkProvider getChunkProvider()`
- `@Deprecated int getChunksLowestHorizon(int x, int z)`
- `EntityPlayer getClosestPlayer(double posX, double posY, double posZ, double distance, boolean spectator)`
- `EntityPlayer getClosestPlayer(double x, double y, double z, double p_190525_7_, com.google.common.base.Predicate<Entity> p_190525_9_)`
- `EntityPlayer getClosestPlayerToEntity(Entity entityIn, double distance)`
- `Vec3d getCloudColorBody(float partialTicks)`
- `Vec3d getCloudColour(float partialTicks)`
- `java.util.List<AxisAlignedBB> getCollisionBoxes(Entity entityIn, AxisAlignedBB aabb)`
- `int getCombinedLight(BlockPos pos, int lightValue)`
- `java.util.Calendar getCurrentDate()`
- `float getCurrentMoonPhaseFactor()`
- `float getCurrentMoonPhaseFactorBody()`
- `java.lang.String getDebugLoadedEntities()`
- `EnumDifficulty getDifficulty()`
- `DifficultyInstance getDifficultyForLocation(BlockPos pos)`
- `<T extends Entity> java.util.List<T> getEntities(java.lang.Class<? extends T> entityType, com.google.common.base.Predicate<? super T> filter)`
- `java.util.List<Entity> getEntitiesInAABBexcluding(Entity entityIn, AxisAlignedBB boundingBox, com.google.common.base.Predicate<? super Entity> predicate)`
- `<T extends Entity> java.util.List<T> getEntitiesWithinAABB(java.lang.Class<? extends T> classEntity, AxisAlignedBB bb)`
- `<T extends Entity> java.util.List<T> getEntitiesWithinAABB(java.lang.Class<? extends T> clazz, AxisAlignedBB aabb, com.google.common.base.Predicate<? super T> filter)`
- `java.util.List<Entity> getEntitiesWithinAABBExcludingEntity(Entity entityIn, AxisAlignedBB bb)`
- `Entity getEntityByID(int id)`
- `Vec3d getFogColor(float partialTicks)`
- `GameRules getGameRules()`
- `IBlockState getGroundAboveSeaLevel(BlockPos pos)`
- `int getHeight()`
- `BlockPos getHeight(BlockPos pos)`
- `int getHeight(int x, int z)`
- `double getHorizon()`
- `int getLastLightningBolt()`
- `int getLight(BlockPos pos)`
- `int getLight(BlockPos pos, boolean checkNeighbors)`
- `float getLightBrightness(BlockPos pos)`
- `int getLightFor(EnumSkyBlock type, BlockPos pos)`
- `int getLightFromNeighbors(BlockPos pos)`
- `int getLightFromNeighborsFor(EnumSkyBlock type, BlockPos pos)`
- `java.util.List<Entity> getLoadedEntityList()`
- `LootTableManager getLootTableManager()`
- `MapStorage getMapStorage()`
- `MinecraftServer getMinecraftServer()`
- `int getMoonPhase()`
- `EntityPlayer getNearestAttackablePlayer(BlockPos pos, double maxXZDistance, double maxYDistance)`
- `EntityPlayer getNearestAttackablePlayer(double posX, double posY, double posZ, double maxXZDistance, double maxYDistance, com.google.common.base.Function<EntityPlayer, java.lang.Double> playerToDouble, com.google.common.base.Predicate<EntityPlayer> p_184150_12_)`
- `EntityPlayer getNearestAttackablePlayer(Entity entityIn, double maxXZDistance, double maxYDistance)`
- `EntityPlayer getNearestPlayerNotCreative(Entity entityIn, double distance)`
- `java.util.List<NextTickListEntry> getPendingBlockUpdates(Chunk chunkIn, boolean p_72920_2_)`
- `java.util.List<NextTickListEntry> getPendingBlockUpdates(StructureBoundingBox structureBB, boolean p_175712_2_)`
- `java.util.Iterator<Chunk> getPersistentChunkIterable(java.util.Iterator<Chunk> chunkIterator)`
- `com.google.common.collect.ImmutableSetMultimap<ChunkPos, ForgeChunkManager.Ticket> getPersistentChunks()` — Get the persistent chunks for this world
- `MapStorage getPerWorldStorage()`
- `EntityPlayer getPlayerEntityByName(java.lang.String name)`
- `EntityPlayer getPlayerEntityByUUID(java.util.UUID uuid)`
- `<T extends Entity> java.util.List<T> getPlayers(java.lang.Class<? extends T> playerType, com.google.common.base.Predicate<? super T> filter)`
- `BlockPos getPrecipitationHeight(BlockPos pos)`
- `java.lang.String getProviderName()`
- `float getRainStrength(float delta)`
- `int getRedstonePower(BlockPos pos, EnumFacing facing)`
- `ISaveHandler getSaveHandler()`
- `Scoreboard getScoreboard()`
- `int getSeaLevel()`
- `long getSeed()`
- `Vec3d getSkyColor(Entity entityIn, float partialTicks)`
- `Vec3d getSkyColorBody(Entity entityIn, float partialTicks)`
- `int getSkylightSubtracted()`
- `BlockPos getSpawnPoint()`
- `float getStarBrightness(float partialTicks)`
- `float getStarBrightnessBody(float partialTicks)`
- `int getStrongPower(BlockPos pos)`
- `int getStrongPower(BlockPos pos, EnumFacing direction)`
- `float getSunBrightness(float partialTicks)`
- `float getSunBrightnessBody(float partialTicks)`
- `float getSunBrightnessFactor(float partialTicks)` — The current sun brightness factor for this dimension. 0.0f means no light at all, and 1.0f means maximum sunlight.
- `float getThunderStrength(float delta)`
- `TileEntity getTileEntity(BlockPos pos)`
- `BlockPos getTopSolidOrLiquidBlock(BlockPos pos)`
- `long getTotalWorldTime()`
- `int getUniqueDataId(java.lang.String key)`
- `VillageCollection getVillageCollection()`
- `WorldBorder getWorldBorder()`
- `WorldInfo getWorldInfo()`
- `long getWorldTime()`
- `WorldType getWorldType()`
- `boolean handleMaterialAcceleration(AxisAlignedBB bb, Material materialIn, Entity entityIn)`
- `boolean hasCapability(Capability<?> capability, EnumFacing facing)` — Determines if this object has support for the capability in question on the specific side.
- `void immediateBlockTick(BlockPos pos, IBlockState state, java.util.Random random)`
- `World init()`
- `protected void initCapabilities()`
- `void initialize(WorldSettings settings)`
- `boolean isAirBlock(BlockPos pos)`
- `boolean isAnyPlayerWithinRangeAt(double x, double y, double z, double range)`
- `boolean isAreaLoaded(BlockPos from, BlockPos to)`
- `boolean isAreaLoaded(BlockPos from, BlockPos to, boolean allowEmpty)`
- `boolean isAreaLoaded(BlockPos center, int radius)`
- `boolean isAreaLoaded(BlockPos center, int radius, boolean allowEmpty)`
- `boolean isAreaLoaded(StructureBoundingBox box)`
- `boolean isAreaLoaded(StructureBoundingBox box, boolean allowEmpty)`
- `boolean isBlockFullCube(BlockPos pos)`
- `int isBlockIndirectlyGettingPowered(BlockPos pos)`
- `boolean isBlockinHighHumidity(BlockPos pos)`
- `boolean isBlockLoaded(BlockPos pos)`
- `boolean isBlockLoaded(BlockPos pos, boolean allowEmpty)`
- `boolean isBlockModifiable(EntityPlayer player, BlockPos pos)`
- `boolean isBlockNormalCube(BlockPos pos, boolean _default)`
- `boolean isBlockPowered(BlockPos pos)`
- `boolean isBlockTickPending(BlockPos pos, Block blockType)`
- `boolean isChunkGeneratedAt(int x, int z)`
- `protected abstract boolean isChunkLoaded(int x, int z, boolean allowEmpty)`
- `boolean isDaytime()`
- `boolean isFlammableWithin(AxisAlignedBB bb)`
- `boolean isMaterialInBB(AxisAlignedBB bb, Material materialIn)`
- `boolean isRaining()`
- `boolean isRainingAt(BlockPos strikePosition)`
- `boolean isSidePowered(BlockPos pos, EnumFacing side)`
- `boolean isSideSolid(BlockPos pos, EnumFacing side)` — Determine if the given block is considered solid on the specified side.
- `boolean isSideSolid(BlockPos pos, EnumFacing side, boolean _default)` — Determine if the given block is considered solid on the specified side.
- `boolean isSpawnChunk(int x, int z)`
- `boolean isThundering()`
- `boolean isUpdateScheduled(BlockPos pos, Block blk)`
- `void joinEntityInSurroundings(Entity entityIn)`
- `WorldSavedData loadData(java.lang.Class<? extends WorldSavedData> clazz, java.lang.String dataID)`
- `void loadEntities(java.util.Collection<Entity> entityCollection)`
- `void makeFireworks(double x, double y, double z, double motionX, double motionY, double motionZ, NBTTagCompound compund)`
- `void markAndNotifyBlock(BlockPos pos, Chunk chunk, IBlockState iblockstate, IBlockState newState, int flags)`
- `void markBlockRangeForRenderUpdate(BlockPos rangeMin, BlockPos rangeMax)`
- `void markBlockRangeForRenderUpdate(int x1, int y1, int z1, int x2, int y2, int z2)`
- `void markBlocksDirtyVertical(int x1, int z1, int x2, int z2)`
- `void markChunkDirty(BlockPos pos, TileEntity unusedTileEntity)`
- `void markTileEntityForRemoval(TileEntity tileEntityIn)`
- `boolean mayPlace(Block p_190527_1_, BlockPos p_190527_2_, boolean p_190527_3_, EnumFacing p_190527_4_, Entity p_190527_5_)`
- `void neighborChanged(BlockPos pos, Block p_190524_2_, BlockPos p_190524_3_)`
- `Explosion newExplosion(Entity entityIn, double x, double y, double z, float strength, boolean isFlaming, boolean isSmoking)`
- `void notifyBlockUpdate(BlockPos pos, IBlockState oldState, IBlockState newState, int flags)`
- `void notifyLightSet(BlockPos pos)`
- `void notifyNeighborsOfStateChange(BlockPos pos, Block blockType, boolean updateObservers)`
- `void notifyNeighborsOfStateExcept(BlockPos pos, Block blockType, EnumFacing skipSide)`
- `void notifyNeighborsRespectDebug(BlockPos pos, Block blockType, boolean p_175722_3_)`
- `void observedNeighborChanged(BlockPos pos, Block p_190529_2_, BlockPos p_190529_3_)`
- `void onEntityAdded(Entity entityIn)`
- `void onEntityRemoved(Entity entityIn)`
- `void playBroadcastSound(int id, BlockPos pos, int data)`
- `void playEvent(EntityPlayer player, int type, BlockPos pos, int data)`
- `void playEvent(int type, BlockPos pos, int data)`
- `protected void playMoodSoundAndCheckLight(int p_147467_1_, int p_147467_2_, Chunk chunkIn)`
- `void playRecord(BlockPos blockPositionIn, SoundEvent soundEventIn)`
- `void playSound(double x, double y, double z, SoundEvent soundIn, SoundCategory category, float volume, float pitch, boolean distanceDelay)`
- `void playSound(EntityPlayer player, BlockPos pos, SoundEvent soundIn, SoundCategory category, float volume, float pitch)`
- `void playSound(EntityPlayer player, double x, double y, double z, SoundEvent soundIn, SoundCategory category, float volume, float pitch)`
- `RayTraceResult rayTraceBlocks(Vec3d start, Vec3d end)`
- `RayTraceResult rayTraceBlocks(Vec3d start, Vec3d end, boolean stopOnLiquid)`
- `RayTraceResult rayTraceBlocks(Vec3d vec31, Vec3d vec32, boolean stopOnLiquid, boolean ignoreBlockWithoutBoundingBox, boolean returnLastUncollidableBlock)`
- `void removeEntity(Entity entityIn)`
- `void removeEntityDangerously(Entity entityIn)`
- `void removeEventListener(IWorldEventListener listener)`
- `void removeTileEntity(BlockPos pos)`
- `void scheduleBlockUpdate(BlockPos pos, Block blockIn, int delay, int priority)`
- `void scheduleUpdate(BlockPos pos, Block blockIn, int delay)`
- `void sendBlockBreakProgress(int breakerId, BlockPos pos, int progress)`
- `void sendPacketToServer(Packet<?> packetIn)`
- `void sendQuittingDisconnectingPacket()`
- `void setAllowedSpawnTypes(boolean hostile, boolean peaceful)`
- `boolean setBlockState(BlockPos pos, IBlockState state)`
- `boolean setBlockState(BlockPos pos, IBlockState newState, int flags)`
- `boolean setBlockToAir(BlockPos pos)`
- `void setData(java.lang.String dataID, WorldSavedData worldSavedDataIn)`
- `void setEntityState(Entity entityIn, byte state)`
- `void setInitialSpawnLocation()`
- `void setLastLightningBolt(int lastLightningBoltIn)`
- `void setLightFor(EnumSkyBlock type, BlockPos pos, int lightValue)`
- `void setRainStrength(float strength)`
- `java.util.Random setRandomSeed(int p_72843_1_, int p_72843_2_, int p_72843_3_)`
- `void setSeaLevel(int seaLevelIn)`
- `void setSkylightSubtracted(int newSkylightSubtracted)`
- `void setSpawnPoint(BlockPos pos)`
- `void setThunderStrength(float strength)`
- `void setTileEntity(BlockPos pos, TileEntity tileEntityIn)`
- `void setTotalWorldTime(long worldTime)`
- `void setWorldTime(long time)`
- `void spawnAlwaysVisibleParticle(int p_190523_1_, double p_190523_2_, double p_190523_4_, double p_190523_6_, double p_190523_8_, double p_190523_10_, double p_190523_12_, int... p_190523_14_)`
- `boolean spawnEntity(Entity entityIn)`
- `void spawnParticle(EnumParticleTypes particleType, boolean ignoreRange, double xCoord, double yCoord, double zCoord, double xSpeed, double ySpeed, double zSpeed, int... parameters)`
- `void spawnParticle(EnumParticleTypes particleType, double xCoord, double yCoord, double zCoord, double xSpeed, double ySpeed, double zSpeed, int... parameters)`
- `void tick()`
- `protected void tickPlayers()`
- `boolean tickUpdates(boolean p_72955_1_)`
- `void unloadEntities(java.util.Collection<Entity> entityCollection)`
- `void updateAllPlayersSleepingFlag()`
- `protected void updateBlocks()`
- `void updateBlockTick(BlockPos pos, Block blockIn, int delay, int priority)`
- `void updateComparatorOutputLevel(BlockPos pos, Block blockIn)`
- `void updateEntities()`
- `void updateEntity(Entity ent)`
- `void updateEntityWithOptionalForce(Entity entityIn, boolean forceUpdate)`
- `void updateObservingBlocksAt(BlockPos pos, Block blockType)`
- `protected void updateWeather()`
- `void updateWeatherBody()`

## Fields

- `boolean captureBlockSnapshots`
- `java.util.ArrayList<BlockSnapshot> capturedBlockSnapshots`
- `protected IChunkProvider chunkProvider`
- `protected int DIST_HASH_MAGIC`
- `protected IntHashMap<Entity> entitiesById`
- `protected java.util.List<IWorldEventListener> eventListeners`
- `protected boolean findingSpawnPoint`
- `boolean isRemote`
- `java.util.List<Entity> loadedEntityList`
- `java.util.List<TileEntity> loadedTileEntityList`
- `protected LootTableManager lootTable`
- `protected MapStorage mapStorage`
- `static double MAX_ENTITY_RADIUS` — Used in the getEntitiesWithinAABB functions to expand the search area for entities.
- `protected PathWorldListener pathListener`
- `protected MapStorage perWorldStorage`
- `java.util.List<EntityPlayer> playerEntities`
- `float prevRainingStrength`
- `float prevThunderingStrength`
- `WorldProvider provider`
- `float rainingStrength`
- `java.util.Random rand`
- `boolean restoringBlockSnapshots`
- `protected ISaveHandler saveHandler`
- `protected boolean scheduledUpdatesAreImmediate`
- `protected boolean spawnHostileMobs`
- `protected boolean spawnPeacefulMobs`
- `Profiler theProfiler`
- `float thunderingStrength`
- `java.util.List<TileEntity> tickableTileEntities`
- `protected java.util.List<Entity> unloadedEntityList`
- `protected int updateLCG`
- `VillageCollection villageCollectionObj`
- `java.util.List<Entity> weatherEffects`
- `protected WorldInfo worldInfo`
- `protected Scoreboard worldScoreboard`